--- a/finimalism7.css
+++ b/finimalism7.css
@@ -3285,13 +3285,19 @@ a[href*="anidb.net"] {
 	min-width: 20em;
 }
 
-.subtitleSync {
+.layout-desktop .subtitleSync,
+.layout-tv .subtitleSync {
 	position: absolute;
 	width: 100%;
 	margin-top: 4em;
 }
 
-.musicParentName {
+.layout-mobile .subtitleSync {
+	margin-top: 2em;
+} 
+
+.layout-desktop .musicParentName,
+.layout-tv .musicParentName {
 	position: absolute;
 	top: -27.225em;
 	width: 22em;
