--- a/finimalism7.css
+++ b/finimalism7.css
@@ -17,7 +17,7 @@ html {
 }
 
 .backgroundContainer, .preload {
-	background-color: #080210;
+	background-color: #0f031f;
 }
 
 .itemsContainer.padded-left {
