--- a/finimalism7.css
+++ b/finimalism7.css
@@ -2532,6 +2532,9 @@ button.is-emby-button emby-button {
 	background-image: none;
 }
 
+.previewListItem:hover {
+	color:black !important;
+}
 
 /*Change Intro Skip Color*/
 .skip-button {
