--- a/finimalism-just-black.css
+++ b/finimalism-just-black.css
@@ -235,3 +235,7 @@
 .card:focus .cardBox:not(.visualCardBox) .cardScalable {
 	border-color: rgba(var(--accent)) !important;
 } 
+
+#nowPlayingPage .remoteControlContent.padded-left.padded-right.padded-bottom.hideVideoButtons {
+	background: #000c;
+}
