--- a/finimalism7.css
+++ b/finimalism7.css
@@ -3143,7 +3143,7 @@ a[href*="thetvdb.com"]::before {
 	display: inline-block;
 	width: 50px;
 	height: 25px;
-	background-image: url('https://i.imgur.com/Jp1VNqp.png');
+	background-image: url('https://i.ibb.co/0sWvrRC/logo-1.png');
 	background-size: contain;
 	background-repeat: no-repeat;
 	margin-right: 5px;
